# school-backend

./: .gitignore  Cargo.toml  LICENSE  openapi.yaml  package-lock.json
src/: errors.rs  main.rs  openapi.rs  openapi_security.rs  scheme.rs  state.rs
src/auth/: extractor.rs  handler.rs  jwt.rs  mod.rs
src/data/: mod.rs  student_repo.rs
src/middleware/: auth.rs
src/models/: api_response.rs  mod.rs  page.rs  student.rs  user.rs
src/routes/: admin_db.rs  auth.rs  mod.rs  student.rs
src/services/: admin_db.rs  mod.rs  student.rs
src/students/: handler.rs
src/swagger/: macros.rs  mod.rs  responses.rs
src/utils/: jwt.rs
