[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"

[dependencies]
# --- Web ---
actix-web = "4.12.1"

# --- Async runtime ---
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- Database ---
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros"
] }

# --- Auth / utils ---
jsonwebtoken = "9"
chrono = "0.4"

# --- OpenAPI ---
utoipa = "=5.4.0"
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
futures-util = "0.3.31"

